--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "mongoose": "^8.16.4",
     "next": "15.0.3",
     "next-themes": "^0.4.6",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.14.1",
